--- a/app/src/main/res/layout/activity_coffee.xml
+++ b/app/src/main/res/layout/activity_coffee.xml
@@ -11,7 +11,7 @@
     tools:context="com.example.android.mob2_assignment.CoffeeActivity">
 
     <Button
-        android:text="Button"
+        android:text="write n"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -21,7 +21,7 @@
         android:id="@+id/button" />
 
     <Button
-        android:text="Button"
+        android:text="write f"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/button"
