--- a/app/src/main/res/layout/activity_coffee.xml
+++ b/app/src/main/res/layout/activity_coffee.xml
@@ -10,22 +10,59 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.android.mob2_assignment.CoffeeActivity">
 
-    <Button
-        android:text="write n"
-        android:layout_width="wrap_content"
+    <ImageButton
+        android:id="@+id/heatUp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/heatUp"
+        android:layout_alignParentRight="true"
+        />
+
+    <LinearLayout
+        android:id="@+id/Llayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="50dp"
-        android:id="@+id/button" />
+        android:orientation="horizontal"
+        android:layout_below="@id/heatUp">
+
+        <ImageButton
+            android:id="@+id/oneCupButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/coffie_cup"
+            android:layout_weight="1"
+            android:layout_margin="10dp"/>
+
+        <ImageButton
+            android:id="@+id/twoCupsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/two_coffie_cups"
+            android:layout_alignParentRight="true"
+            android:layout_weight="1"
+            android:layout_margin="10dp"/>
+    </LinearLayout>
 
     <Button
-        android:text="write f"
-        android:layout_width="wrap_content"
+        android:id="@+id/setPresetButton"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/button"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="46dp"
-        android:id="@+id/button2" />
+        android:layout_alignParentBottom="true"
+        android:text="@string/preset"
+        />
+
+    <ListView
+        android:id="@+id/presetList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/Llayout"
+        android:layout_above="@+id/setPreset"></ListView>
+
+
+
+
+
+
+
 </RelativeLayout>
