--- a/app/src/main/res/layout/activity_coffee.xml
+++ b/app/src/main/res/layout/activity_coffee.xml
@@ -4,65 +4,64 @@
     android:id="@+id/activity_coffee"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/actColour"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.mob2_assignment.CoffeeActivity">
+    tools:context="com.example.android.mob2_assignment.activities.CoffeeActivity">
 
     <ImageButton
         android:id="@+id/heatUp"
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/heatUp"
-        android:layout_alignParentRight="true"
-        />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@string/heat_up_img_desc"
+        android:elevation="20dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/coffee_bean_icon" />
 
     <LinearLayout
-        android:id="@+id/Llayout"
+        android:id="@+id/btnLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@id/heatUp">
+        android:layout_below="@id/heatUp"
+        android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/oneCupButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/coffie_cup"
+            android:layout_margin="10dp"
             android:layout_weight="1"
-            android:layout_margin="10dp"/>
+            android:contentDescription="@string/one_cup_img_desc"
+            android:elevation="20dp"
+            android:src="@drawable/coffee_bean_icon" />
 
         <ImageButton
             android:id="@+id/twoCupsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/two_coffie_cups"
-            android:layout_alignParentRight="true"
+            android:layout_margin="10dp"
             android:layout_weight="1"
-            android:layout_margin="10dp"/>
+            android:contentDescription="@string/two_cups_img_desc"
+            android:elevation="20dp"
+            android:src="@drawable/coffee_bean_icon" />
     </LinearLayout>
+
+    <ListView
+        android:id="@+id/presetList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/setPresetButton"
+        android:layout_below="@+id/btnLayout"
+        android:background="@color/actListColour" />
 
     <Button
         android:id="@+id/setPresetButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="@string/preset"
-        />
-
-    <ListView
-        android:id="@+id/presetList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/Llayout"
-        android:layout_above="@+id/setPreset"></ListView>
-
-
-
-
-
-
-
+        android:text="@string/preset" />
 </RelativeLayout>
