--- a/app/src/main/res/layout/activity_nfc.xml
+++ b/app/src/main/res/layout/activity_nfc.xml
@@ -8,6 +8,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.mob2_assignment.NFC">
+    tools:context="com.example.android.mob2_assignment.interfaces.NFC">
 
 </RelativeLayout>
