--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,11 +5,12 @@
     <color name="colorAccent">#ff7240</color>
     <color name="colorListBackground">#FFC107</color>
     <color name="colorListBackground2">#FFA000</color>
-    
+
     <color name="toolbar_text">#F1F1F1</color>
-    <color name="cardview_background">#FFFFFF</color>
+    <color name="card_view_background">#FFFFFF</color>
+    <color name="actListColour">#FFE082</color>
+    <color name="actColour">#FFC107</color>
 
     <color name="bluetooth_desc">#B4BAC0</color>
     <color name="bluetooth_name">#2B3D4D</color>
-
 </resources>
