--- a/app/src/main/res/layout/activity_coffee.xml
+++ b/app/src/main/res/layout/activity_coffee.xml
@@ -13,14 +13,12 @@
 
     <ImageButton
         android:id="@+id/heatUp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="100dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:contentDescription="@string/heat_up_img_desc"
-        android:elevation="20dp"
         android:scaleType="centerInside"
-        android:src="@drawable/heat_up" />
+        android:src="@drawable/coffee_bean_icon"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
 
     <LinearLayout
         android:id="@+id/btnLayout"
@@ -31,25 +29,23 @@
 
         <ImageButton
             android:id="@+id/oneCupButton"
-            android:layout_width="120dp"
-            android:layout_height="150dp"
-            android:layout_margin="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
             android:layout_weight="1"
-            android:contentDescription="@string/one_cup_img_desc"
-            android:elevation="20dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/one_cup" />
+            android:layout_margin="20dp"
+            android:src="@drawable/coffee_bean_icon" />
 
         <ImageButton
             android:id="@+id/twoCupsButton"
-            android:layout_width="120dp"
-            android:layout_height="150dp"
-            android:layout_margin="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:contentDescription="@string/two_cups_img_desc"
-            android:elevation="20dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/two_cups" />
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:layout_margin="20dp"
+            android:src="@drawable/coffee_bean_icon" />
     </LinearLayout>
 
     <ListView
