Change of icons

--- a/app/src/main/res/layout/activity_coffee.xml
+++ b/app/src/main/res/layout/activity_coffee.xml
@@ -13,12 +13,15 @@
 
     <ImageButton
         android:id="@+id/heatUp"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="100dp"
-        android:scaleType="centerInside"
+        android:layout_margin="15dp"
+        android:scaleType="fitXY"
+        android:padding="10dp"
+        android:layout_centerHorizontal="true"
         android:src="@drawable/heatup_button"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:background="@color/actColour"
+        android:elevation="20dp"/>
 
     <LinearLayout
         android:id="@+id/btnLayout"
@@ -34,18 +37,24 @@
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
             android:layout_weight="1"
+            android:padding="10dp"
             android:layout_margin="20dp"
-            android:src="@drawable/onecup" />
+            android:src="@drawable/onecup"
+            android:background="@color/actColour"
+            android:elevation="20dp" />
 
         <ImageButton
             android:id="@+id/twoCupsButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
+            android:layout_weight="1"
+            android:padding="10dp"
             android:layout_margin="20dp"
-            android:src="@drawable/twocups" />
+            android:src="@drawable/twocups"
+            android:background="@color/actColour"
+            android:elevation="20dp"/>
     </LinearLayout>
 
     <ListView
