--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -11,6 +11,7 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar_main"
             android:layout_width="match_parent"
@@ -22,21 +23,21 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
         android:paddingTop="16dp"
         android:text="@string/found_devices" />
 
     <ListView
-        android:id="@+id/listview_main"
+        android:id="@+id/listView_main"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="5" />
 
     <Button
+        android:id="@+id/scan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:id="@+id/scan"
-        android:text="scan"/>
-
+        android:text="@string/btnScan" />
 </LinearLayout>
