--- a/app/src/main/res/layout/preset_dialog.xml
+++ b/app/src/main/res/layout/preset_dialog.xml
@@ -119,6 +119,7 @@
         android:textSize="18sp" />
 
     <Button
+        android:id="@+id/stepDateBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
