--- a/app/src/main/res/layout/item_list_layout.xml
+++ b/app/src/main/res/layout/item_list_layout.xml
@@ -10,6 +10,7 @@
     <ImageView
         android:layout_width="@dimen/listview_img"
         android:layout_height="@dimen/listview_img"
+        android:src="@drawable/coffee_bean_icon"
          />
 
     <LinearLayout
