--- a/app/src/main/res/layout/item_list_layout.xml
+++ b/app/src/main/res/layout/item_list_layout.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="@dimen/listview_img"
         android:layout_height="@dimen/listview_img"
-        android:src="@drawable/coffee_bean_icon" />
+        android:src="@drawable/coffee_bean_icon"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -27,7 +27,8 @@
             android:gravity="center"
             android:maxLines="1"
             android:textColor="@color/bluetooth_name"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            />
 
         <TextView
             android:id="@+id/machineAddress"
@@ -38,5 +39,6 @@
             android:maxLines="1"
             android:textColor="@color/bluetooth_desc"
             android:textSize="12sp" />
+
     </LinearLayout>
 </LinearLayout>
