--- a/app/src/main/res/layout/preset_dialog.xml
+++ b/app/src/main/res/layout/preset_dialog.xml
@@ -52,33 +52,14 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/hours"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/sampleHour"
-            android:textSize="20sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/timeSeparator"
-            android:textSize="20sp" />
-
-        <EditText
-            android:id="@+id/minutes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/sampleMinutes"
-            android:textSize="20sp" />
-    </LinearLayout>
+        android:hint="@string/sampleHour"
+        android:inputType="time"
+        android:layout_gravity="center"
+        android:textSize="20sp" />
 
     <TextView
         android:layout_width="match_parent"
